--- a/Day-02/14-ExpressApp/views/bugs/index.hbs
+++ b/Day-02/14-ExpressApp/views/bugs/index.hbs
@@ -1,8 +1,21 @@
+<style>
+    .closed {
+        color : red;
+        text-decoration: line-through;
+        font-style: italic;
+        font-weight: bold;
+    }
+</style>
 <h1>Bugs</h1>
 <hr>
 <ol>
     {{#each list}}
-        <li>{{name}}</li>
+        <li>
+           <span {{#if isClosed}} class='closed' {{/if}}>
+                {{name}}
+           </span>
+           <a href="/bugs/toggle/{{id}}">X</a>
+        </li>
     {{/each}}
 </ol>
 <a href="/bugs/new">Create New</a>
